--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
 
 	<style media="screen" type="text/css">
       .layer1_class { position: fixed; z-index: 2000; visibility: visible; background-color: #000 !important; height: 120%; width: 100%; transition: 1s; opacity: 1.0; }
@@ -79,12 +81,12 @@
 
 
 </head>
-<body onload="downLoad()">
+<body onload="downLoad()" style="background-image: linear-gradient(rgba(255,255,255,0.7),rgba(255,255,255,0.7)), url(images/bg.gif); background-attachment: fixed; background-position: center; background-repeat: no-repeat; background-size: cover;">
 
 	<div id="layer1" class="layer1_class">
       <table width="100%">
         <tr>
-          <td align="center"><img src="images/ieeesiesblack.png" class="loadimg"></td>
+          <td align="center"><img src="images/load.gif" class="loadimg"></td>
         </tr>
         <tr>
             <td class="loading">Loading<load class="load1">.</load><load class="load2">.</load><load class="load3">.</load></td>
@@ -97,10 +99,27 @@
 
 
     	<header>
-    		<div class="logo">
-					
-				</div>
+
+    		<div class="logo">LOGO</div>
+        <nav>
+          <ul>
+            <li><a href="#" class="active">HOME</a></li>
+            <li><a href="#">ABOUT US</a></li>
+            <li><a href="#">OUR PRODUCTS</a></li>
+            <li><a href="#">CONTACT US</a></li>
+          </ul>
+        </nav>
+        <div class="menu-toggle"><i class="fa fa-bars" aria-hidden="true"></i></div>
+
     	</header>
+
+      <script type="text/javascript">
+        $(document).ready(function(){
+          $('.menu-toggle').click(function(){
+            $('nav').toggleClass('active')
+          })
+        })
+      </script>
 
 
 
