--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <h1 class="text-center banner-title">URJA <span class="farm-dark">FARM</span> EATS</h1>
         <h3 class="text-center banner-text">We sell over <b><span class="counter" data-target="100">0</span></b> different fruits and vegetables!</h3>
         <div class="text-center banner-btn">
-          <a href="order.html" class="banner-btn1">Order Now!</a>
+          <a href="order.html" class="banner-btn1">Order Online</a>
           <a href="products.html" class="banner-btn2">Our Products</a>
         </div>
       </div>
