--- a/index.html
+++ b/index.html
@@ -43,13 +43,24 @@
       .loadbox
       {
         position: absolute;
-        height: 100px;
-        width: 500px;
+        height: 160px;
+        width: 700px;
         top: 50%;
         left: 50%;
         text-align: center;
         margin-top: -100px;
-        margin-left: -250px;
+        margin-left: -350px;
+      }
+
+      .green
+      {
+        color: green;
+        font-size: 80px;
+      }
+
+      .darkgreen
+      {
+        color: darkgreen;
       }
       
       .load1 {visibility: hidden; animation-name: one; animation-iteration-count: infinite; animation-duration: 1.2s; animation-timing-function: step-end;}
