--- a/index.html
+++ b/index.html
@@ -84,25 +84,7 @@
 			color: darkgreen;
 		}
 
-		.load1 {visibility: hidden; animation-name: one; animation-iteration-count: infinite; animation-duration: 2s; animation-timing-function: step-end;}
-		.load2 {visibility: hidden; animation-name: two; animation-iteration-count: infinite; animation-duration: 2s; animation-timing-function: step-end;}
-		.load3 {visibility: hidden; animation-name: three; animation-iteration-count: infinite; animation-duration: 2s; animation-timing-function: step-end;}
-		@keyframes one {
-			0%{visibility: hidden;}
-			25%{visibility: visible;}
-			100%{visibility: hidden;}
-		}
-		@keyframes two {
-			0%{visibility: hidden;}
-			50%{visibility: visible;}
-			100%{visibility: hidden;}
-		}
-		@keyframes three {
-			0%{visibility: hidden;}
-			75%{visibility: visible;}
-			100%{visibility: hidden;}
-		}
-
+		
 
 
 	</style>
@@ -148,7 +130,7 @@
 	<div class="loading">
 		<div class="loadbox">
 			<h1 class="green">URJA <span class="darkgreen">FARM</span> EATS</h1>
-			<h2 class="loadtext">Loading <span class="load1">.</span> <span class="load2">.</span> <span class="load3">.</span></h2>
+			<h3 class="loadtext">Loading . . .</h3>
 		</div>
 	</div>
 
