--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
 	<br>
 	<div class="banner">
 		<br>
-		<h1 class="text-center banner-title">URJA <span class="farm-dark">FARM</span> EATS</h1>
+		<h1 class="text-center banner-title">Urja <span class="farm-dark">Farm</span> Eats</h1>
+		<h3 class="banner-tagline text-center">FEEL THE FRESHNESS</h3>
 		<h4 class="text-center banner-text">We sell over <b><span class="counter" data-target="99">0</span></b> different fruits and vegetables!</h4>
 		<div class="text-center banner-btn">
 			<a href="order.html" class="banner-btn1">Order Online</a>
