navbar and banner hopefully final

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
 
+	<link rel="shortcut icon" href="images/logo.jpg">
+    <link rel="icon" href="images/logo.jpg">
+    <link rel="apple-touch-icon" href="images/logo.jpg">
+
 	
 	<script>
 		function numcount(){
