--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
 		<div class="logo"><a href="javascript: void(0)">U<span class="farm-dark">F</span>E</a></div>
 		<nav id="nav">
 			<ul>
-				<li><a href="javascript: void(0)" class="active"><b>HOME</b></a></li>
-				<li><a href="about.html"><b>ABOUT US</b></a></li>
-				<li><a href="products.html"><b>OUR PRODUCTS</b></a></li>
-				<li><a href="order.html"><b>ORDER NOW</b></a></li>
-				<li><a href="contact.html"><b>CONTACT US</b></a></li>
+				<li><a href="javascript: void(0)" class="active">HOME</a></li>
+				<li><a href="about.html">ABOUT US</a></li>
+				<li><a href="products.html">OUR PRODUCTS</a></li>
+				<li><a href="order.html">ORDER NOW</a></li>
+				<li><a href="contact.html">CONTACT US</a></li>
 			</ul>
 		</nav>
 		<div class="menu-toggle" onclick="myFunction(this)" id="toggle">
