--- a/index.html
+++ b/index.html
@@ -152,40 +152,40 @@
 	<div class="footer">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-					<h3>
+				<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 footer-blocks">
+					<h3 class="footer-head">
 						Reach Out to Us
 					</h3>
-					<div class="row">
+					<div class="row footer-left">
 						<div class="col-2 text-center"><i class="far fa-address-card"></i></div>
-						<div class="col-10">Vaibhav Kopardekar</div>
+						<div class="col-10 footer-contact">Vaibhav Kopardekar<br>Aditya</div>
 					</div>
-					<div class="row">
+					<div class="row footer-left">
 						<div class="col-2 text-center"><i class="fas fa-store"></i></div>
-						<div class="col-10">4/6, Malwani Municipal Colony, Near Malwani Police Station, Malad West, Mumbai-400075</div>
+						<div class="col-10 footer-contact">4/6, Malwani Municipal Colony, Near Malwani Police Station, Malad West, Mumbai-400075</div>
 					</div>
-					<div class="row">
+					<div class="row footer-left">
 						<div class="col-2 text-center"><i class="fas fa-mobile-alt"></i></div>
-						<div class="col-10">9137600428</div>
+						<div class="col-10 footer-contact">9137600428</div>
 					</div>
-					<div class="row">
+					<div class="row footer-left">
 						<div class="col-2 text-center"><i class="far fa-envelope"></i></div>
-						<div class="col-10">urjafarmeats@gmail.com</div>
+						<div class="col-10 footer-contact">urjafarmeats@gmail.com</div>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-					<h3>
+				<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 footer-blocks">
+					<h3 class="footer-head">
 						Social Media Handles
 					</h3>
 					<p>
-						We are always approachable to you on your most loved social media handles. You can also place your orders by sending direct messages here.
+						We are always approachable to you on your most loved social media handles.<br>Our social media pages are regularly updated.<br>You can also place your orders by sending direct messages here.
 						<br>
 						<a href="#" class="button btn insta"><i class="fab fa-instagram"></i> instagram</a>
 						<a href="#" class="button btn fb"><i class="fab fa-facebook-f"></i> facebook</a>
 					</p>
 				</div>
-				<div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
-					<h3>
+				<div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 footer-blocks">
+					<h3 class="footer-head">
 						Newsletter
 					</h3>
 					<p>
