--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 					</div>
 					<div class="row footer-left">
 						<div class="col-2 text-center"><i class="fas fa-mobile-alt"></i></div>
-						<div class="col-10 footer-contact">9137600428</div>
+						<div class="col-10 footer-contact">+91 9137600428</div>
 					</div>
 					<div class="row footer-left">
 						<div class="col-2 text-center"><i class="far fa-envelope"></i></div>
@@ -177,26 +177,32 @@
 					<h3 class="footer-head">
 						Social Media Handles
 					</h3>
-					<p>
+					<p class="footer-mid">
 						We are always approachable to you on your most loved social media handles.<br>Our social media pages are regularly updated.<br>You can also place your orders by sending direct messages here.
 						<br>
-						<a href="#" class="button btn insta"><i class="fab fa-instagram"></i> instagram</a>
-						<a href="#" class="button btn fb"><i class="fab fa-facebook-f"></i> facebook</a>
+					</p>
+					<p>
+						<a href="#" class="button btn insta footer-social1"><i class="fab fa-instagram"></i> instagram</a>
+						<a href="#" class="button btn fb footer-social2"><i class="fab fa-facebook-f"></i> facebook</a>
 					</p>
 				</div>
 				<div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 footer-blocks">
 					<h3 class="footer-head">
 						Newsletter
 					</h3>
-					<p>
+					<p class="footer-right">
 						By subscribing to our mailing list you will always get latest offers and updates from us.
 						<br>
 						<form class="text-center footer-form">
 							<input type="email" name="" class="footer-input" placeholder="Type your email" required><button type="submit" class="btn footer-button"><i class="far fa-paper-plane"></i></button>
 						</form>
 					</p>
+					<p class="credits">
+						Created by Abhishek Joshi (+919757468857)<br>for 360 Digital Solutions <img class="digi-sol" src="images/digi_sol.jpg">
+					</p>
 				</div>
 			</div>
+			<div class="copyright text-center"><i class="far fa-copyright"></i> 2020 Urja Farm Eats. All rights reserved.</div>
 		</div>
 	</div>	
 </footer>
