--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
 
+	<!-- Chrome, Firefox OS and Opera -->
+	<meta name="theme-color" content="#1eff00">
+	<!-- Windows Phone -->
+	<meta name="msapplication-navbutton-color" content="#1eff00">
+	<!-- iOS Safari -->
+	<meta name="apple-mobile-web-app-status-bar-style" content="#1eff00">
+
+
 
 
 	<!-- CSS only -->
