--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
 
 	<!-- Chrome, Firefox OS and Opera -->
-	<meta name="theme-color" content="#1eff00">
+	<meta name="theme-color" content="#0b4d02">
 	<!-- Windows Phone -->
-	<meta name="msapplication-navbutton-color" content="#1eff00">
+	<meta name="msapplication-navbutton-color" content="#0b4d02">
 	<!-- iOS Safari -->
-	<meta name="apple-mobile-web-app-status-bar-style" content="#1eff00">
+	<meta name="apple-mobile-web-app-status-bar-style" content="#0b4d02">
 
 
 
