--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 					</h3>
 					<div class="row footer-left">
 						<div class="col-2 text-center"><i class="far fa-address-card"></i></div>
-						<div class="col-10 footer-contact">Vaibhav Kopardekar<br>Aditya</div>
+						<div class="col-10 footer-contact">Vaibhav Kopardekar<br>Aditya Tawde</div>
 					</div>
 					<div class="row footer-left">
 						<div class="col-2 text-center"><i class="fas fa-store"></i></div>
