--- a/index.html
+++ b/index.html
@@ -147,7 +147,16 @@
 		},2500);
 	</script>
 
-
+<br>
+<div class="delivery-flow text-center">
+	<i class="fas fa-mobile"></i>
+	<i class="fas fa-long-arrow-alt-right"></i>
+	<i class="fas fa-truck"></i>
+	<i class="fas fa-long-arrow-alt-right"></i>
+	<i class="fas fa-home"></i>
+	<i class="fas fa-long-arrow-alt-right"></i>
+	<i class="far fa-grin-beam"></i>
+</div>
 
 <!--footer-->
 
