--- a/index.html
+++ b/index.html
@@ -155,8 +155,9 @@
 	<i class="fas fa-long-arrow-alt-right"></i>
 	<i class="fas fa-home"></i>
 	<i class="fas fa-long-arrow-alt-right"></i>
-	<i class="far fa-grin-beam"></i>
+	<i class="far fa-grin-beam"></i> 
 </div>
+<pre class="pre text-center">Order Placed        Order Shipped          Door-step Delivery     Happy Customers</pre>
 
 <!--footer-->
 
