--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 	<header>
 
-		<div class="logo"><a href="javascript: void(0)">U<span class="farm-dark">F</span>E</a></div>
+		<div class="logo"><a href="javascript: void(0)"><img src="images/logo.jpg">U<span class="farm-dark">F</span>E</a></div>
 		<nav id="nav">
 			<ul>
 				<li><a href="javascript: void(0)" class="active">HOME</a></li>
@@ -147,7 +147,50 @@
 		},2500);
 	</script>
 
-<br>
+
+<div class="container">
+	<h2 class="text-center topic">Why to Choose Us?</h2>
+	<p class="why-us">Your safety is our primary concern. Our team is committed to ensure that you get fresh and healthy groceries at your door-step. We also assure fair trade with farmers. Additionally, we ensure hygenic packing, 100% food safety and best in class food quality. We <b>don't</b> use any chemicals and directly provide the groceries from the farm. Our rates too, are lower than the market rates.
+	</p>
+	<p class="covid text-center text-danger">
+		We <b>strictly</b> follow the below specified rules while working.
+		<div class="covid-padding">
+			<div class="row">
+				<div class="col-lg-6 col-sm-12 covid-rule">
+					<div class="row text-danger">
+						<div class="col-1 covid-icon"><i class="fas fa-people-arrows"></i></div>
+						<div class="col-11">All our employees always practise social distancing.</div>
+					</div>
+				</div>
+				<div class="col-lg-6 col-sm-12 covid-rule">
+					<div class="row text-danger">
+						<div class="col-1 covid-icon"><i class="fas fa-hands-wash"></i></div>
+						<div class="col-11">We wash our hands regularly and keep them clean.</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-6 col-sm-12 covid-rule">
+					<div class="row text-danger">
+						<div class="col-1 covid-icon"><i class="fas fa-head-side-mask"></i></div>
+						<div class="col-11">We wear face masks at work and during delivery.</div>
+					</div>
+				</div>
+				<div class="col-lg-6 col-sm-12 covid-rule">
+					<div class="row text-danger">
+						<div class="col-1 covid-icon"><i class="fas fa-handshake-slash"></i></div>
+						<div class="col-11">We strictly make contact-less delivery.</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</p>
+
+</div>
+
+<h2 class="text-center topic">Our Work Process</h2>
+
 <div class="delivery-flow text-center">
 	<i class="fas fa-mobile"></i>
 	<i class="fas fa-long-arrow-alt-right"></i>
