--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
 
 	<header>
 
-		<div class="logo"><a href="https://urjafarmeats.com/" id="logo"><img src="images/logo.jpg">U<span class="farm-dark">F</span>E</a></div>
+		<div class="logo"><a href="https://urjafarmeats.com/" id="logo"><img src="images/logo.jpg">Urja<span class="farm-dark">Farm</span>Eats</a></div>
 		<nav id="nav">
 			<ul>
 				<li><a href="https://urjafarmeats.com/">HOME</a></li>
