--- a/about.html
+++ b/about.html
@@ -98,21 +98,21 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="images/car3.png" class="d-block w-100 carimg" alt="...">
+      <img src="images/car1.jpg" class="d-block w-100 carimg" alt="...">
       <div class="carousel-caption d-md-block">
         <h5 class="shadow-text">Helping Indian farmers</h5>
         <p class="shadow-text">We purchase all vegetables from our farmers at reasonable price.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="images/car2.png" class="d-block w-100 carimg" alt="...">
+      <img src="images/car2.jpg" class="d-block w-100 carimg" alt="...">
       <div class="carousel-caption d-md-block">
         <h5 class="shadow-text">Providing fresh grocery</h5>
         <p class="shadow-text">We always provide best in class quality.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="images/car1.png" class="d-block w-100 carimg" alt="...">
+      <img src="images/car3.jpg" class="d-block w-100 carimg" alt="...">
       <div class="carousel-caption d-md-block">
         <h5 class="shadow-text">Lower Rates.</h5>
         <p class="shadow-text">We try to provide you grocery at lowest possible rates.</p>
